--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,108 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+/* HEADER */
+.header {
+  padding: 24px 48px;
+}
+
+.header,
+.footer {
+  background-color: #1f2937;
+}
+
+.header-logo {
+  font-size: 2.4rem;
+  color: #f9faf8;
+}
+
+.row {
+  width: 70%;
+  margin: 0 auto;
+}
+
+/* NAVIGATION BAR */
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu {
+  display: flex;
+  gap: 28px;
+}
+
+/* HERO SECTION */
+.hero {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+
+  height: 70vh;
+}
+
+.main-heading {
+  font-size: 4.8rem;
+  font-weight: 900;
+  line-height: 1;
+  color: #f9faf8;
+
+  margin-bottom: 1rem;
+}
+
+.hero-text,
+.hero-img {
+  flex: 1;
+}
+
+.hero-img {
+  color: #e5e7eb;
+
+  background-color: grey;
+  height: 24.5rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.value-proposition,
+.menu a {
+  font-size: 1.8rem;
+  color: #e5e7eb;
+}
+
+.value-proposition {
+  margin-bottom: 1.5rem;
+}
+
+.btn-cta {
+  display: inline-block;
+  background-color: #3882f6;
+  padding: 0.8rem 4rem;
+  border-radius: 8px;
+
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: #f9faf8;
+}
+
+/* FOOTER */
+.footer {
+  text-align: center;
+  color: #e5e7eb;
+
+  padding: 5.2rem;
 }
