--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ ul {
 .btn-cta {
   display: inline-block;
   background-color: #3882f6;
-  padding: 0.8rem 4rem;
+  padding: 0.6rem 4rem;
   border-radius: 8px;
 
   font-size: 1.8rem;
@@ -112,6 +112,40 @@ ul {
   color: #f9faf8;
 }
 
+/* CALL TO ACTION */
+.cta {
+  height: 35rem;
+
+  display: flex;
+  align-items: center;
+}
+.cta-banner {
+  background-color: #3882f6;
+  border-radius: 0.8rem;
+  padding: 4rem 14rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 4rem;
+}
+
+.cta-text h2 {
+  font-size: 2.8rem;
+  line-height: 1.2;
+  color: #f9faf9;
+}
+
+.cta-text p {
+  font-size: 1.8rem;
+  color: #e5e7eb;
+}
+
+.cta-banner .btn-cta {
+  border: 2px solid #f9faf8;
+
+  flex-shrink: 0;
+}
 /* FOOTER */
 .footer {
   text-align: center;
