--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,34 @@ ul {
   color: #f9faf8;
 }
 
+/* TESTIMONIAL */
+.testimonial {
+  background-color: #e5e7eb;
+  height: 45rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.testimonial blockquote {
+  width: 54%;
+
+  text-align: right;
+}
+
+.testimonial p {
+  font-size: 3.6rem;
+  font-style: italic;
+  text-align: left;
+  color: #1f2937;
+}
+
+.testimonial span {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
 /* CALL TO ACTION */
 .cta {
   height: 35rem;
