--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,47 @@ ul {
   color: #f9faf8;
 }
 
+/* INFO */
+.info {
+  height: 60rem;
+  padding: 6rem 0;
+}
+
+.info h2 {
+  font-size: 3.6rem;
+  font-weight: 900;
+  text-align: center;
+  color: #1f2937;
+
+  margin-bottom: 3.8rem;
+}
+
+.info-items {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+
+  width: 60%;
+  margin: 0 auto;
+
+  text-align: center;
+}
+
+.info-img-placeholder {
+  height: 20rem;
+  width: 20rem;
+  border: 4px solid #3882f6;
+  border-radius: 1.2rem;
+
+  margin-bottom: 1rem;
+}
+
+.info-text {
+  font-size: 2.2rem;
+  line-height: 1.3;
+  color: #777;
+}
+
 /* TESTIMONIAL */
 .testimonial {
   background-color: #e5e7eb;
@@ -170,7 +211,7 @@ ul {
 }
 
 .cta-banner .btn-cta {
-  border: 2px solid #f9faf8;
+  border: 3px solid #f9faf8;
 
   flex-shrink: 0;
 }
